Release/0.3.0 (#15)
Release contains authn/authz features
